# la-morfologia-no-surt-de-franc

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/: family_traits.csv  minimal_pairs.csv  morph_pairs.csv
docs/: findings.md  limitations.md  methodology.md  morphology-background.md  references.md  reproduce.md
part2/: config.py  p01_prepare_corpus.py  p02_train.py  p03_evaluate.py  p04_train_curves.py  p05_dissociation_fig.py  run_all.sh  run_combined.sh  run_final.sh
scripts/: embed_lib.py  geom_lib.py  labels_ca.py  m01_build_lexicon.py  m02_tokenize_audit.py  m03_extract.py  m04_geometry.py  m05_figs.py  m06_figs.py  m07_regularity.py  m08_ie_patterns.py  m09_carrier_robustness.py  m10_romance.py  m11_probe.py  m12_minimal_pairs.py  morf_seg.py  rule_seg.py
tests/: test_embed_lib.py  test_geom_lib.py  test_m01_lexicon.py  test_m02_audit.py  test_m03_extract.py  test_m04_geometry.py  test_m05_figs.py  test_m06_figs.py  test_m07_regularity.py  test_m08_ie_patterns.py  test_m09_carrier.py  test_m11_probe.py  test_m12_minimal_pairs.py  test_morf_seg.py  test_rule_seg.py
