[project]
name = "tokenizer-analisis"
version = "0.1.0"
description = "How subword tokenization fractures Catalan morphology, and whether a universal segmentation recovers the hidden-state geometry."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Xavier Vinaixa Roselló", email = "xavi@sorensen.ai" }]
dependencies = [
    "accelerate>=1.0",
    "matplotlib>=3.9",
    "morfessor>=2.0.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    "scikit-learn>=1.5",
    "sentencepiece>=0.2",
    "torch>=2.5,<2.7",
    "transformers>=4.56",
    "umap-learn>=0.5.6",
]

[project.optional-dependencies]
# Part 2 (continued-pretraining on H200/A100 — not needed for Part 1 analysis)
train = ["datasets>=2.20", "bitsandbytes>=0.43"]

# torch from the CUDA 12.4 wheel index — the default PyPI wheel targets a newer
# CUDA than common GPU-box drivers ship (e.g. driver 12.8 can't load cu130 torch).
# cu124 wheels run on any driver >= 12.4. Override the index if your box differs.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
